# sl-programs

programs/: ChangeLog  Makefile.am  bootstrap  configure.ac
programs/benchmarks/blas/: .gitignore  bench-dcopy.inputs  bench-dscal.inputs  blasbench.h  gendata.sh
programs/benchmarks/ca/: benchca.c  lidka.d768800
programs/benchmarks/fft/: fft-bench.c  fft.h  fft_extra.c  fft_impl1.c  fft_impl2.c
programs/benchmarks/lib/: Makefile.am  benchmark.c  benchmark.h  genmake.sh
programs/benchmarks/livermore/: .gitignore  kernel23.c  kernel3.c  kernel4.c  kernel6.c  ll-generate.py
programs/benchmarks/mandel/: mandel.c  mandel.d2
programs/benchmarks/sha/: sha1.c  sha1_alt.c
programs/benchmarks/smooth/: smooth.c
programs/build-aux/: benchmarks.mk
programs/demo/: Makefile.am  ca1d_demo.c  ca1d_demo2.c  ca1d_main.c  checkers.c  fibonacci.c  fibre.c  keyblit.c  msort.c  msort.c.d10  msort.c.d16  pi.c  roman.c  sep.c  speed.c  tmalloc.c  uart.c
programs/matmul/: Makefile.am  input.d10  input.d30  matmul.c  simple.c  simple_d_10.c  simple_d_30.c  simple_d_var.c  simple_f_10.c  simple_f_30.c  simple_f_var.c  simple_l_10.c  simple_l_30.c  simple_l_var.c
